hphp/test/zend/bad/ext-spl/SplDoublyLinkedList_pop_params.php
<?php

$array = new SplDoublyLinkedList( );

$get = $array->pop( 'param' );

?>